2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve generalized constant propagation analysis.

2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/stdckdint.h:
	  Work around an issue in inlining _Generic results to mitigate strtotul code size regression.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  A few more bits of generalized constant propagation analysis and optimization.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve proof-of-concept for generalized constant propagation analysis and optimization to the point where it almost passes regression tests.
	* src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCopt.c:
	  Introduce --nogenconstprop option.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Refactor proof-of-concept for generalized constant propagation analysis using new iCode operand handling.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.h:
	  Store operands of IFX and JUMPTAB the same way as operands of other iCodes.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCdflow.h,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  src/SDCCgenconstprop.cc:
	  A first proof-of-concept for generalized constant propagation analysis.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable tests that fail due to known -ms08 --stack-auto bugs.
	* doc/sdccman.lyx:
	  Document hc08/s08 struct/union parameter support.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/mos6502/gen.c,
	  src/z80/gen.c:
	  support/regression/MakeList:
	  Fix a right-shift codegen sign issue triggered by register packing.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,