@@ -695,6 +695,7 @@ value *checkArrayIval (sym_link *, value *);
 value *checkIval (sym_link *, value *);
 unsigned int getSize (sym_link *);
 unsigned int bitsForType (sym_link *);
+sym_link *newBitIntLink (unsigned int width);
 sym_link *newIntLink ();
 sym_link *newCharLink ();
 sym_link *newLongLink ();
